<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#904E55"
    android:orientation="vertical"
    app:hintTextAppearance="@style/HintText"
    tools:context="ca.cmpt276.walkinggroup.app.EditUserInformation">

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/smallMargin"
        android:text="@string/title_activity_edit_user_information"
        android:textColor="@color/colorHeadings"
        android:textSize="@dimen/heading"
        android:textStyle="bold" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/content_margin"
        android:layout_weight="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt_userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/smallMargin"
                android:text="@string/txt_userName"
                android:textColor="@color/colorHeadings"
                android:textSize="@dimen/contentTextSize" />

            <EditText
                android:id="@+id/etxt_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/smallMargin"
                android:layout_weight="1"
                android:hint="@string/txt_userName2"
                android:inputType="textPersonName"
                android:paddingTop="0dp"
                android:textColor="@color/colorHeadings"
                android:textColorHint="@color/colorHintEditText"
                android:textSize="@dimen/editTextTextSize" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/txt_userEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/smallMargin"
                android:text="@string/txt_userEmail"
                android:textColor="@color/colorHeadings"
                android:textSize="@dimen/contentTextSize" />

            <EditText
                android:id="@+id/etxt_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/smallMargin"
                android:layout_weight="1"
                android:hint="@string/txt_userEmail2"
                android:inputType="textEmailAddress"
                android:paddingTop="0dp"
                android:textColor="@color/colorHeadings"
                android:textColorHint="@color/colorHintEditText"
                android:textSize="@dimen/editTextTextSize" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/txt_birthMonth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/smallMargin"
                android:text="@string/txt_userBirthMonth"
                android:textColor="@color/colorHeadings"
                android:textSize="@dimen/contentTextSize" />

            <EditText
                android:id="@+id/etxt_birthMonth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/smallMargin"
                android:layout_weight="1"
                android:hint="@string/txt_userBirthMonth2"
                android:inputType="number"
                android:maxLength="2"
                android:paddingTop="0dp"
                android:textColor="@color/colorHeadings"
                android:textColorHint="@color/colorHintEditText"
                android:textSize="@dimen/editTextTextSize" />

        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/txt_birthYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/smallMargin"
                android:text="@string/txt_userBirthYear"
                android:textColor="@color/colorHeadings"
                android:textSize="@dimen/contentTextSize" />

            <EditText
                android:id="@+id/etxt_birthYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/smallMargin"
                android:layout_weight="1"
                android:hint="@string/txt_userBirthYear2"
                android:inputType="number"
                android:maxLength="4"
                android:paddingTop="0dp"
                android:textColor="@color/colorHeadings"
                android:textColorHint="@color/colorHintEditText"
                android:textSize="@dimen/editTextTextSize" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/txt_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/smallMargin"
                android:text="@string/txt_userAddress"
                android:textColor="@color/colorHeadings"
                android:textSize="@dimen/contentTextSize" />

            <EditText
                android:id="@+id/etxt_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/smallMargin"
                android:layout_weight="1"
                android:hint="@string/txt_userAddress2"
                android:inputType="textPersonName"
                android:paddingTop="0dp"
                android:textColor="@color/colorHeadings"
                android:textColorHint="@color/colorHintEditText"
                android:textSize="@dimen/editTextTextSize" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/txt_cellPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/smallMargin"
                android:text="@string/txt_userCellPhone"
                android:textColor="@color/colorHeadings"
                android:textSize="@dimen/contentTextSize" />

            <EditText
                android:id="@+id/etxt_cellPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/smallMargin"
                android:layout_weight="1"
                android:digits="0123456789-()"
                android:hint="@string/txt_userCellPhone2"
                android:inputType="phone"
                android:paddingTop="0dp"
                android:textColor="@color/colorHeadings"
                android:textColorHint="@color/colorHintEditText"
                android:textSize="@dimen/editTextTextSize" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/txt_homePhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/smallMargin"
                android:text="@string/txt_userHomePhone"
                android:textColor="@color/colorHeadings"
                android:textSize="@dimen/contentTextSize" />

            <EditText
                android:id="@+id/etxt_homePhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/smallMargin"
                android:layout_weight="1"
                android:digits="0123456789-()"
                android:hint="@string/txt_userHomePhone2"
                android:inputType="phone"
                android:paddingTop="0dp"
                android:textColor="@color/colorHeadings"
                android:textColorHint="@color/colorHintEditText"
                android:textSize="@dimen/editTextTextSize" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/txt_grade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/smallMargin"
                android:text="@string/txt_userGrade"
                android:textColor="@color/colorHeadings"
                android:textSize="@dimen/contentTextSize" />

            <EditText
                android:id="@+id/etxt_grade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/smallMargin"
                android:layout_weight="1"
                android:hint="@string/txt_userGrade2"
                android:inputType="textPersonName"
                android:paddingTop="0dp"
                android:textColor="@color/colorHeadings"
                android:textColorHint="@color/colorHintEditText"
                android:textSize="@dimen/editTextTextSize" />

        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/txt_teacher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/smallMargin"
                android:text="@string/txt_userTeacherName"
                android:textColor="@color/colorHeadings"
                android:textSize="@dimen/contentTextSize" />

            <EditText
                android:id="@+id/etxt_teacher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/smallMargin"
                android:layout_weight="1"
                android:hint="@string/txt_userTeacherName2"
                android:inputType="textPersonName"
                android:paddingTop="0dp"
                android:textColor="@color/colorHeadings"
                android:textColorHint="@color/colorHintEditText"
                android:textSize="@dimen/editTextTextSize" />

        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/smallMargin"
                android:text="@string/txt_userEmergencyContactInfo"
                android:textColor="@color/colorHeadings"
                android:textSize="@dimen/contentTextSize" />

            <EditText
                android:id="@+id/etxt_emergencyContact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/smallMargin"
                android:layout_weight="1"
                android:hint="@string/txt_userEmergencyContactInfo2"
                android:inputType="textPersonName"
                android:paddingTop="0dp"
                android:textColor="@color/colorHeadings"
                android:textColorHint="@color/colorHintEditText"
                android:textSize="@dimen/editTextTextSize" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/content_margin"
                android:text="@string/txt_required_fields"
                android:textColor="@color/colorHeadings" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:text="@string/btn_edit" />

    </LinearLayout>

</LinearLayout>
