<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#904E55"
    tools:context="ca.cmpt276.walkinggroup.app.MainMenuActivity"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/mainMenuHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/content_margin"
        android:text="@string/txt_mainMenuHeader"
        android:textColor="@color/colorHeadings"
        android:textSize="@dimen/heading"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btn_goToMaps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/smallMargin"
            android:background="@drawable/button"
            android:text="@string/btn_maps"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_parentsDashboardMap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/smallMargin"
            android:background="@drawable/button"
            android:text="@string/btn_parents_dashboard"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_messages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/smallMargin"
            android:background="@drawable/button"
            android:text="@string/btn_messages"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_permissions_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/smallMargin"
            android:background="@drawable/button"
            android:text="@string/title_permission_requests"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_game_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/smallMargin"
            android:background="@drawable/button"
            android:text="@string/title_game_menu"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_account_management"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/smallMargin"
            android:background="@drawable/button"
            android:text="@string/title_account_management"
            android:textAllCaps="false" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/smallMargin"
        android:background="@drawable/button"
        android:text="@string/btn_logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</android.support.constraint.ConstraintLayout>
