<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#904E55"
    tools:context="ca.cmpt276.walkinggroup.app.LoginActivity"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/txt_loginHeader"
        android:textColor="#F2EFE9"
        android:textSize="@dimen/heading"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/content_margin"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <TableRow>

            <TextView
                android:id="@+id/txt_userEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_userEmail"
                android:textColor="@color/colorHeadings" />

            <EditText
                android:id="@+id/etxt_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/smallMargin"
                android:ems="10"
                android:hint="@string/txt_userEmail2"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorHeadings" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt_userPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_userPassword"
                android:textColor="@color/colorHeadings" />

            <EditText
                android:id="@+id/etxt_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/smallMargin"
                android:ems="10"
                android:hint="@string/txt_userPassword2"
                android:inputType="textPassword"
                android:textColor="@color/colorHeadings" />

        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/content_margin"
                android:text="@string/txt_required_fields"
                android:textColor="@color/colorHeadings" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/smallPadding"
        android:background="@drawable/button"
        android:layout_marginBottom="@dimen/smallMargin"
        android:layout_marginEnd="@dimen/smallMargin"
        android:text="@string/btn_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</android.support.constraint.ConstraintLayout>

