<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    tools:context="ca.cmpt276.walkinggroup.app.AccountMonitoringActivity">

    <TextView
        android:id="@+id/title_account_monitoring"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_account_monitoring"
        style="@style/ActivityHeader" />

    <Button
        android:id="@+id/btn_monitorParent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_monitor_parent"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/big_margin"
        style="@style/ButtonStyle" />

    <Button
        android:id="@+id/btn_monitorChild"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_monitor_child"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/smallMargin"
        style="@style/ButtonStyle" />

</LinearLayout>
