<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#904E55"
    tools:context="ca.cmpt276.walkinggroup.app.AccountManagementActivity"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/title_account_management"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/title_account_management"
        android:textColor="@android:color/white"
        android:textSize="@dimen/heading"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/accntntMangmnt_btn_editUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:textAllCaps="false"
            android:text="@string/btn_editUserInfo" />

        <Button
            android:id="@+id/btn_editChild"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/smallMargin"
            android:textAllCaps="false"
            android:background="@drawable/button"
            android:text="@string/btn_editChildInfo"/>

        <Button
            android:id="@+id/btn_monitor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/smallMargin"
            android:background="@drawable/button"
            android:text="@string/title_account_monitoring"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_viewGroups"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:layout_marginTop="@dimen/smallMargin"
            android:text="@string/title_activity_viewGroups"
            android:textAllCaps="false" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
